feat(ui): add reusable Modal with dynamic props

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <body>
     <div id="root"></div>
+
+    <!-- The modal is rendering here -->
+    <div id="portal-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
